Update for GitHub

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link href="/style.css" type="text/css" rel="stylesheet">
-        <link rel="icon" type="image/x-icon" href="/logo.png">
+        <link href="https://lonadb.github.io/Website/style.css" type="text/css" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="https://lonadb.github.io/Website/logo.png">
     </head>
     <body>
         <p class="luna">LonaDB</p>
