--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p>Requests can be sent from a Client. These requests are stringified JSONs containing all data required from the server to operate and give the requested variable's value for example.</p>
             <br>
             <p>There is currently only one official client for LonaDB, which is written in JavaScript.</p>
-            <a href="https://www.npmjs.com/package/LonaDB-client">Client</a>
+            <a href="https://www.npmjs.com/package/lonadb-client">Client</a>
         </div>
 
         <br>
@@ -38,8 +38,7 @@
         <div class="where">
             <p class="title">Where can I get LonaDB?</p>
             <p>LonaDB is available on GitHub. In the README.md is a quick tutorial on how to install LonaDB.</p>
-            <p>Please remember to edit the config.js file!</p>
-            <a href="https://github.com/Hanyaku-Chan/LonaDB/">GitHub</a>
+            <a href="https://github.com/LonaDB/">GitHub</a>
         </div>
 
         <br>
