--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link href="https://lona.js.org/style.css" type="text/css" rel="stylesheet">
-        <link rel="icon" type="image/x-icon" href="https://lona.js.org/logo.png">
+        <link href="https://lonadb.github.io/Website/style.css" type="text/css" rel="stylesheet">
+        <link href="/style.css" type="text/css" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="https://lonadb.github.io/Website/logo.png">
     </head>
     <body>
-        <p class="luna">LonaDB</p>
+        <div class="nav">
+            <p id="lonapc" class="navi">LonaDB</p>
+            <p id="lonamobile" class="navi">LDB</p>
+        </div>
         <div class="what">
             <p class="title">What is LonaDB?</p>
             <p>LonaDB is a early prototype of a Database written in JavaScript.</p>
@@ -29,7 +33,7 @@
             <p>Requests can be sent from a Client. These requests are stringified JSONs containing all data required from the server to operate and give the requested variable's value for example.</p>
             <br>
             <p>There is currently only one official client for LonaDB, which is written in JavaScript.</p>
-            <a href="https://www.npmjs.com/package/lonadb-client">Client</a>
+            <a href="https://www.npmjs.com/package/LonaDB-client">Client</a>
         </div>
 
         <br>
@@ -38,7 +42,8 @@
         <div class="where">
             <p class="title">Where can I get LonaDB?</p>
             <p>LonaDB is available on GitHub. In the README.md is a quick tutorial on how to install LonaDB.</p>
-            <a href="https://github.com/LonaDB/">GitHub</a>
+            <p>Please remember to edit the config.js file!</p>
+            <a href="https://github.com/Hanyaku-Chan/LonaDB/">GitHub</a>
         </div>
 
         <br>
